# wiki_mobile_project

./: .env.bstack  README.md  config.py  pyproject.toml  pytest.ini  requirements.txt
config/: .env.local_emulator  config.py
tests/: conftest.py  test_wikipedia.py
tests/android_app/: test_wikipedia.py
tests/ios_app/: test_wikipedia.py
tests/web/: test_wikipedia.py
utils/: allure.py  attach.py  files.py
wiki_mobile_tests/utils/: files.py
