[tool.poetry]
name = "125-mobile-tests"
version = "0.1.0"
description = ""
authors = ["Vitaliy Zakharov <zak125@mail.ru>"]
readme = "README.md"
packages = [{include = "125_mobile_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
allure-pytest = "^2.13.2"
selene = "2.0.0rc4"
appium-python-client = "^3.1.1"
requests = "^2.31.0"
selenium = ">=4.14.0,<4.15.0"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
